--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
-<header></header>
-<slider></slider>
-<content></content>
+<div class="padreApp">
+  <header></header>
+  <slider></slider>
+  <content></content>
 
-<footer></footer>
+  <footer></footer>
+</div>
