--- a/src/app/myComponents/content/content.component.html
+++ b/src/app/myComponents/content/content.component.html
@@ -68,7 +68,9 @@
           </h2>
           <br />
 
-          <button id="ir">IR A BIT</button>
+          <button id="ir">
+            <a href="https://bit.institute/" target="_blank">IR A BIT</a>
+          </button>
         </div>
       </div>
     </div>
