--- a/src/app/myComponents/footer/footer.component.html
+++ b/src/app/myComponents/footer/footer.component.html
@@ -3,8 +3,8 @@
   rel="stylesheet"
 />
 <div id="footer">
-  <div id="grupo">Desarrollado por @Grupo No. 1</div>
-  <div id="bit">bit - Bogota institute of technology</div>
+  <div id="grupo">Desarrollado por TECHNOGIRLS</div>
+  <div id="bit">BIT - Bogotá Institute of Technology</div>
   <div id="redes">
     <a href="https://www.facebook.com/" target="_blank">
       <img src="../../../assets/img/facebook_footer.png" alt="facebook" />
