--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,17 @@
+@import "~bootstrap/dist/css/bootstrap.css";
+
+@media (min-width: 576px) {
+  .padreApp {
+    position: relative;
+  }
+}
+
 * {
   font-family: "Montserrat", sans-serif;
 }
 
 #footer {
-  width: 1440px;
+  width: auto;
   height: 100px;
   background: white;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
@@ -15,13 +23,16 @@
 }
 #header {
   display: grid;
-  height: 150px;
-  width: auto;
+  display: block;
+  height: 120px;
+  width: 100%;
   left: 0px;
   top: 0px;
   background: #ffffff;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.05);
   grid-template-columns: 3fr 1fr;
+  position: fixed;
+  z-index: 900;
 }
 #cajaLogo {
   height: 150px;
@@ -38,13 +49,14 @@
   width: 214px;
   height: 80px;
   left: 100px;
-  top: 46px;
+  top: 24px;
 }
 #nav {
   font-family: Montserrat;
   align-content: right;
 }
 #nav ul {
+  display: flex;
   margin: 0;
   padding: 0;
   list-style: none;
